# ferridyn-memory

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  plugin-README.md
.cargo/: config.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: browse.md  forget.md  health.md  recall.md  remember.md  setup.md  status.md
docs/: ferridyndb-prd.md
scripts/: config.mjs
scripts/src/: config.ts  memory-commit.ts  memory-health.ts  memory-reflect.ts  memory-retrieval.ts  memory-stats.ts  types.ts
skills/browse/: SKILL.md
skills/context/: SKILL.md
skills/decide/: SKILL.md
skills/forget/: SKILL.md
skills/health/: SKILL.md
skills/learn/: SKILL.md
skills/recall/: SKILL.md
skills/reflect/: SKILL.md
skills/remember/: SKILL.md
skills/setup/: SKILL.md
skills/status/: SKILL.md
skills/teach/: SKILL.md
skills/update/: SKILL.md
src/: backend.rs  cli.rs  error.rs  lib.rs  llm.rs  main.rs  mcp.rs  schema.rs  server.rs  ttl.rs
