[package]
name = "dynamite-memory"
version = "0.1.0"
edition = "2024"

[lib]
name = "dynamite_memory"
path = "src/lib.rs"

[[bin]]
name = "dynamite-memory"
path = "src/main.rs"

[[bin]]
name = "dynamite-memory-cli"
path = "src/cli.rs"

[dependencies]
dynamite-core = { path = "../dynamite-core" }
dynamite-server = { path = "../dynamite-server" }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
dirs = "6"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
async-trait = "0.1"
regex = "1"
indexmap = { version = "2", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
